ansible/roles/configure-router-network/templates/rules.v4
*filter
:INPUT DROP [258:47220]
:FORWARD DROP [1190:95328]
:OUTPUT ACCEPT [512:75070]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i wg0 -p tcp -m tcp --dport 2049 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 51871 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp2s0f0 -o vlan2-shim -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m multiport --dports 22,32400,25564,25565,25566,443 -m conntrack --ctstate NEW -j ACCEPT


#VPN rules
-A FORWARD -i wg0 -o bond0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m multiport --dports 111,443,5201,2049,2342,33333 -m conntrack --ctstate NEW  -j ACCEPT
-A FORWARD -i wg0 -o bond0 -p udp -m multiport --dports 53 -j ACCEPT
-A FORWARD -i wg0 -o wg0 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -i vlan3-shim -o wg0 -j ACCEPT
-A FORWARD -i wg0 -o vlan3-shim -p tcp -m tcp --dport 5201 -j ACCEPT

#VLAN rules
-A FORWARD -i vlan2-shim -o enp2s0f0 -j ACCEPT
-A FORWARD -i vlan3-shim -o enp2s0f0 -j ACCEPT
-A FORWARD -i vlan4-shim -o enp2s0f0 -j ACCEPT
-A FORWARD -i vlan2-shim -o mullvad-us79 -j ACCEPT
-A FORWARD -i vlan3-shim -o mullvad-us79 -j ACCEPT
-A FORWARD -i vlan4-shim -o mullvad-us79 -j ACCEPT
-A FORWARD -i bond0+ -o enp2s0f0 -j ACCEPT
-A FORWARD -i bond0+ -o mullvad-us79 -j ACCEPT
-A FORWARD -i bond0.6 -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [3865:382006]
:INPUT ACCEPT [9:736]
:OUTPUT ACCEPT [11:3483]
:POSTROUTING ACCEPT [1535:109099]
-A PREROUTING -i enp2s0f0 -p tcp -m tcp --dport 25565 -j DNAT --to-destination 10.2.32.1:25565
-A PREROUTING -i enp2s0f0 -p tcp -m tcp --dport 22 -j DNAT --to-destination 192.168.1.3:22
-A PREROUTING -i enp2s0f0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.2.32.1:443
-A PREROUTING -i enp2s0f0 -p tcp -m tcp --dport 32400 -j DNAT --to-destination 10.2.32.1:32400
-A PREROUTING -s 192.168.1.0/24 -i bond0 -p tcp -m set --match-set wan_ip dst -m tcp -j DNAT --to-destination 10.2.32.1
-A PREROUTING -i enp2s0f0 -p udp -m udp --dport 51871 -j ACCEPT
-A PREROUTING -i enp2s0f0 -p tcp -m tcp --dport 25564 -j DNAT --to-destination 10.2.32.1:25564
-A POSTROUTING -o mullvad-us79 -j MASQUERADE
-A POSTROUTING -o enp2s0f0 -j MASQUERADE
-A POSTROUTING -s 192.168.1.0/24 -d 10.2.32.1/32 -o bond0 -p tcp -m tcp -j SNAT --to-source 192.168.1.1
COMMIT
*mangle
-A PREROUTING -i vlan3-shim ! -d 10.0.0.0/8 -j MARK --set-mark 1
-A PREROUTING -i vlan4-shim ! -d 10.0.0.0/8 -j MARK --set-mark 1
-A PREROUTING -i bond0.3 ! -d 10.0.0.0/8 -j MARK --set-mark 1
-A PREROUTING -i bond0.4 ! -d 10.0.0.0/8 -j MARK --set-mark 1
-A PREROUTING -i bond0.7 ! -d 10.0.0.0/8 -j MARK --set-mark 1
COMMIT
